style.css
@font-face {
    font-family: 'yumenikki';
    src: url(fonts/yume_nikki_font.ttf);
}

h1, h2, h3, h4, h5, h6{
    color: rgb(var(--primary-color));
}
p,.text, .about_content{
    color: rgb(var(--secondary-color));
}
h1 {
    font-size: clamp(3rem, 2.73rem + 1.09vw, 3.6rem);
    font-variant: small-caps;
    font-weight: 600;
}
h2{
	font-size: clamp(2.2rem, 2.1rem + 0.8vw, 2.5rem);
    font-weight: 100;
    font-variant: small-caps;
}
h3, .about_content{
    font-size: clamp(1.25rem, 1.14rem + 0.46vw, 1.5rem);
    font-variant: small-caps;
}
h4{
    font-size: clamp(1.5rem, 1.36rem + 0.55vw, 1.8rem);
}
p {
    font-size: clamp(0.75rem, 1rem + 0.2vw, 1.2rem);
} 
.text{
    font-size: clamp(0.83rem, 0.76rem + 0.33vw, 1rem);
}
a{
    color: rgb(var(--link-color));
}


*{
    --primary-color: 255, 255, 255;
    --secondary-color: 233, 233, 233;
    --backplate-color: 38, 42, 44;
    --block-color: 64, 56, 56;
    --link-color: 109, 95, 155;
    --outline-color: 29, 25, 25;
    --outline-color-alt: 94, 89, 120;
    --hover-color: 112, 3, 255;

    margin: 0;
    padding: 0;
    position: relative;
    scroll-behavior: smooth;
    scroll-padding-top: 7vh;
    box-sizing: border-box;
    font-family: 'Ubuntu Mono', monospace;
}

body{
    min-height: 100vh;
    min-height: 100dvh;
    background-image: url('resources/backgrounds/grey_hexagons_on_black_background.jpg');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    scrollbar-width: thin;
}

.page_content{
    width: 100%;
    max-width: 2600px; 
    margin-left: auto;
    margin-right: auto;
    padding: 0 min(5vw, 20px);
}


#navbar{
    z-index: 1000;
    display: flex;
    justify-content: flex-end;
    position: sticky;
    top: 0;
    overflow: auto;
    background-color: rgba(var(--link-color), 0.3);
    backdrop-filter: blur(5px);
}
#navbar ul{
    list-style-type: none;
    display: flex;
}
#navbar li{
    display: flex;
}
#navbar a{
    color: white;
    text-align: center;
    padding: 1em 2em;
    text-decoration: none;
    font-size: 1.5rem;
    font-style: italic;
    font-variant: small-caps;
    transition: background-color 400ms ease;
}
#navbar a:hover{
  background-color: rgba(var(--hover-color), 0.3);
}
#open_sidebar_button{
    z-index: 8;
    display: none;
    background: none;
    border: none;
    padding: min(0.9em,8%);
    margin-right: auto;
    cursor: pointer;
    background-color: rgba(141, 141, 141, 0.3);
    clip-path: circle(35%);
}
#open_sidebar_button svg{
    display: flex;
    justify-content: center;
    align-content: center;
}
#close_sidebar_button{
    display: none;
    background: none;
    border: none;
    padding: min(1em,8%);
    margin-left: auto;
    cursor: pointer;
}
#overlay{
    background: rgba(0, 0, 0, 0.3);
    position: fixed;
    inset: 0;
    z-index: 9;
    display: none;
}
@media screen and (max-width: 800px) {
    #close_sidebar_button{
        display: block;
    }
    #open_sidebar_button {
        display: block;
        position: fixed;
        top: 2%;          
        opacity: 60%;   
    }
    #open_sidebar_button:hover{
        opacity: 100%;
    }
    #navbar button{
        padding-bottom: 25vh;
    }
    #navbar.show{
        left: 0;
    }
    #navbar.show ~ #open_sidebar_button {
    display: none;
    }
    #navbar.show ~ #overlay {
        display: block;
    }
    #navbar {
        scrollbar-width: thin;
        overflow: auto;
        position: fixed;
        top: 0;
        left: -100%;
        height: 100vh;
        width: min(15em, 100%);
        z-index: 10;
        background-color: rgba(14, 0, 0, 0.9);
        backdrop-filter: blur(7px);
        display: flex;
        flex-direction: column;
        justify-content: flex-start;

        transition: left 350ms ease-out
    }
    #navbar ul{
        width: 100%;
        flex-direction: column;
    }
    #navbar a {
        width: 100%; 
        color: white;
        text-align: center;
        padding-right: 2.5em;
        text-decoration: none;
        font-size: 1.5rem;
        transition: background-color 400ms ease;
    }
}

#home{
    display: flex;
    justify-content: center;
}
#welcome_img1{
    max-width: 100%;
    height: clamp(200px, 55vw, 1700px);
}
#welcome_img2{
    margin-top: 2vh;
    max-width: 100%;
    height: minmax(500px, 100vw);
    display: none;
}
#lancer_button{
    font-variant: small-caps;
    font-weight: 700;
    font-size: clamp(0.5rem, 0.2782rem + 1.4194vw, 1.875rem);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: clamp(6.25rem, 3.571rem + 14.286vw, 25rem);
    height: clamp(6.25rem, 3.571rem + 14.286vw, 25rem);
    clip-path: circle(30%);
    background-color: rgba(85, 134, 189, 0.60);
    cursor: pointer;
}
#lancer_button>p{
    color: black;
}
#lancer_sprite, #snake, #nightmare{
    position: absolute;
    display: none;
    opacity: 1;
    transform: translate(-50%, -50%);
    transition: opacity 100ms;
}
#lancer_sprite{
    top: 38%;
    left: 25%;
    width: clamp(50px, 6vw, 400px);
    max-height: clamp(50px, 6vw, 400px);
}
#snake{
    top: 50%;
    left: 50%;
    width: clamp(6.25rem, 3.571rem + 14.286vw, 25rem);
    height: clamp(6.25rem, 3.571rem + 14.286vw, 25rem);
    clip-path: circle(30%);
}
#nightmare{
    top: 50%;
    left: 50%;
    width: 80%;
    max-height: clamp(200px, 100vw, 1100px);
}
#doakes{
    position: absolute;
    display: none;
    transform: translate(-50%, -50%);
    top: 27%;
    left: 50%;
    width: 40%;
    max-height: clamp(400px, 50vw, 800px);
    opacity: 0;
}
@keyframes fadeinout {
  50% { opacity: 0.75; }
}
#lancer_sprite.fade, #nightmare.fade, #snake.fade{
    opacity: 0;
}
@media (max-width: 800px) {
    #welcome_img1{
        display: none;
    }
    #welcome_img2{
        display: block;
    }
    #lancer_sprite{
        top: 35%;
        left: 25%;
    }
    #nightmare{
        max-height: clamp(200px, 80vw, 1800px);
    }
    #doakes{
        top: 35%;
        width: 60%;
        max-height: clamp(500px, 100vw, 800px);
    }
}




.projects_container{
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    max-width: 3000px;
    padding: min(5vh,10%);
    overflow: visible;
}
.projects_container h3{
    text-align: center;
    margin-bottom: 1vh;
}
#projects_box{
    display: grid;
    grid-template-columns: repeat(1, minmax(200px,1fr));
    gap: 10px;
    padding: 20px;
    background-color: rgba(var(--backplate-color), 0.3);
    backdrop-filter: blur(5px);
    overflow: hidden;
    align-content: center;
    justify-content: center;
}
@media (min-width: 800px) {
    #projects_box {
        grid-template-columns: repeat(3, minmax(0,1fr));
    }

}
#projects_box>div{
    text-align: center;
    padding: clamp(0.5em, 2vw, 1.5em);
    border: 3.5px solid rgb(var(--outline-color)); 
    background-color: rgb(var(--block-color));
}
.projects_container p{
    text-align: left;
}
.projects_container img{
    max-width: 100%;
    height: clamp(200px, 20vw, 600px);
    object-fit:contain;
    transition:transform 0.25s ease;
}
.projects_container img:hover{
    cursor: pointer;
    filter: brightness(70%);
}
.projects_container video{
    max-width: 100%;
    height: clamp(200px, 20vw, 600px);
    object-fit:contain;
}
.projects_container model-viewer{
    margin: 0 auto;
    max-width: 100%;
    width: clamp(200px, 27vw, 600px);
    height: clamp(200px, 20vw, 600px);
}
#cat_button{
    cursor: pointer;
    text-decoration: underline;
}
#model_zoom_button{
    width: 50%;
    height: auto;         
    min-height: clamp(1.5rem, 1.4rem + 0.6vw, 1.875rem);
    margin-bottom: 1vh;
    margin-top: 1vh;
    background-color: black;
    border: 1.5px solid rgb(var(--outline-color-alt));
    cursor: pointer;
    color: white;
    overflow: auto;
}
#click {
    width: clamp(0.83rem, 0.99rem + 0.6vw, 2rem);
    height: clamp(0.90rem, 0.99rem + 0.6vw, 2rem);
    background-color: black;
    border: 1.5px solid rgb(var(--outline-color-alt));
    cursor: pointer;
}

.about_container {
    background-color: rgb(var(--backplate-color), 0.3);
    backdrop-filter: blur(5px);
    padding: 1em;
}
.about_container>div{
    max-width: 100%;
    padding: 1em;
    background-color: rgb(var(--block-color));
    border: 4px solid rgb(var(--outline-color));
}
.about_content{
    padding-left: 2vw;
}

.contact_bar {
    display: flex; 
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    background-color: rgb(var(--backplate-color), 0.3);
    backdrop-filter: blur(5px);
    gap: 10px;
    padding: 1em;
    text-align: center;
    margin-bottom: 10vh;
}
.contact_bar div {
    flex: 1 1 250px;
    max-width: 800px;
    padding: 1em;
    background-color: rgb(var(--block-color));
    border: 4px solid rgb(var(--outline-color));
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
#contact_github>a, #contact_email>a{
    text-decoration: none;
}
@media screen and (max-width: 800px) {
    .contact_bar {
        flex-direction: column;
        align-items: stretch;
    }
    .contact_bar div {
        max-width: 100%;
        max-height: 150px;
        width: 100%;
    }
}


/* Slideshow styling */
.slideshow_container img{
    max-width: 100%;
    height: clamp(200px, 20vw, 600px);
    object-fit:contain;
}
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: auto;
  padding: min(500em, 10%) min(0.5em, 2%);
  color: white;
  background-color: rgba(0,0,0,0.1);
  transition: 400ms ease;
  user-select: none;
}
.next {
  right: 0;
  border-radius: 10px 0 0 10px;
}
.prev {
  left: 0;
  border-radius: 0 10px 10px 0;
}
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}
.numbertext {
  color: #f2f2f2;
  font-size: clamp(0.63rem, 0.57rem + 0.23vw, 0.75rem);
  position: absolute;
  top: 0;
  z-index: 5;
}
@media screen and (max-width: 600px) {
   .numbertext{
        position: sticky;
        padding-bottom: 1vh;
        padding-top: 1em;
   }
} 


#full_view_image{
    display: none;
    position: fixed;
    animation-name: zoom;
    z-index: 10000;
    overflow: auto;
    padding-top: 3vh;
    inset: 0;
    width: 100%;
    height: 100%;
    backdrop-filter: blur(12px);
    background-color: rgba(0, 0, 0, 0.7);
    text-align: center;
}
#full_image{
    filter: brightness(100%);
    width: 95%;
    height: 95%;
    padding: 24px;
    cursor: default;
}
#close_button{
    text-decoration: none;
    display: block;
    position: absolute;
    top: 0;
    right: 3%;
    font-size: 5rem;
    color: var(--close_button_color_full_img_view, white);
}
#close_button:hover, #close_button:focus {
  color: var(--close_button_color_hover_focus_full_img_view, rgb(205, 205, 205));
  text-decoration: none;
  cursor: pointer;
}
#full_view_model{
    display: none;
    position: fixed;
    animation-name: zoom;
    z-index: 10000;
    overflow: auto;
    padding-top: 10vh;
    inset: 0;
    width: 100%;
    height: 100%;
    backdrop-filter: blur(10px);
    background-color: rgba(0, 0, 0, 0.7);
    text-align: center;
}
#full_model{
    width: 95%;
    height: 95%;
    padding: 24px;
    cursor: default;
}
#full_view_background>p{
    text-align: center;
    padding-bottom:1vh;
}
#full_view_background_options{
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 20px;
}
#full_view_background_options>button{
    width: 10%;
    height: auto;         
    min-height: clamp(1.5rem, 1.4rem + 0.6vw, 1.875rem);
    cursor: pointer;
}
#full_view_background_black{
    background-color: black;
    border: 1px solid rgb(135, 16, 16);
}
#full_view_background_white{
    background-color: white;
    border: 1px solid rgb(197, 0, 0);
}
#full_view_background_gray{
    background-color: rgb(130, 130, 130);
    border: 1px solid rgb(135, 16, 16);
}

